# Hack_heart-disease

./: .gitignore  Data & Code  HeartWave.py  README.md  main.py  main_model.py  missing  model_accuracies.csv  pyproject.toml  readfile.py  requirements.txt  test.ipynb  test.py
dataset/: __init__.py  data_processing.py  ecg_processor.py  pcg_processor.py
models/: __init__.py  cls_model.py  deep_model.py  inception_model.py  logistic_model.py  model.py  svm_model.py
utils/: __init__.py  plotting_tools.py
