[tool.poetry]
name = "hack-coronary-heart-disease"
version = "0.1.0"
description = ""
authors = ["MuhammadMoustafa <engmuhammadmoustafa@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
aiohttp = "3.8.5"
aiosignal = "1.3.1"
alabaster = "0.7.16"
ansicon = "1.89.0"
anyio = "3.7.0"
appdirs = "1.4.4"
argon2-cffi = "21.3.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.2.3"
astor = "0.8.1"
asttokens = "2.2.1"
astunparse = "1.6.3"
async-timeout = "4.0.3"
attrs = "23.1.0"
Babel = "2.14.0"
backcall = "0.2.0"
beautifulsoup4 = "4.12.2"
bibtexparser = "1.4.1"
bleach = "6.0.0"
blessed = "1.20.0"
certifi = "2023.7.22"
cffi = "1.15.1"
charset-normalizer = "3.2.0"
colorama = "0.4.6"
comm = "0.1.3"
contourpy = "1.3.0"
cycler = "0.12.1"
debugpy = "1.6.7"
decorator = "5.1.1"
defusedxml = "0.7.1"
Deprecated = "1.2.14"
docutils = "0.20.1"
et-xmlfile = "1.1.0"
executing = "1.2.0"
fake-useragent = "1.4.0"
fastjsonschema = "2.17.1"
filelock = "3.15.4"
flatbuffers = "24.3.25"
fonttools = "4.53.1"
fqdn = "1.5.1"
free_proxy = "1.1.1"
frozenlist = "1.4.0"
fsspec = "2024.6.1"
gast = "0.6.0"
git-python = "1.0.3"
gitdb = "4.0.10"
GitPython = "3.1.35"
google-pasta = "0.2.0"
grad-cam = "1.5.3"
grpcio = "1.65.4"
h11 = "0.14.0"
h5py = "3.11.0"
httpcore = "1.0.4"
httpx = "0.27.0"
huggingface-hub = "0.24.2"
idna = "3.4"
imagesize = "1.4.1"
inquirer = "3.1.3"
ipykernel = "6.23.3"
ipython = "8.14.0"
ipython-genutils = "0.2.0"
ipywidgets = "8.0.6"
isoduration = "20.11.0"
jedi = "0.18.2"
Jinja2 = "3.1.2"
jinxed = "1.2.0"
joblib = "1.4.2"
jsonpointer = "2.4"
jsonschema = "4.17.3"
jupyter = "1.0.0"
jupyter-console = "6.6.3"
jupyter-events = "0.6.3"
jupyter_client = "8.3.0"
jupyter_core = "5.3.1"
jupyter_server = "2.6.0"
jupyter_server_terminals = "0.4.4"
jupyterlab-pygments = "0.2.2"
jupyterlab-widgets = "3.0.7"
kaleido = "0.2.1"
keras = "3.4.1"
kiwisolver = "1.4.5"
libclang = "18.1.1"
lxml = "5.1.0"
Markdown = "3.6"
markdown-it-py = "3.0.0"
MarkupSafe = "2.1.3"
matplotlib = "3.9.2"
matplotlib-inline = "0.1.6"
mdurl = "0.1.2"
mistune = "3.0.1"
ml-dtypes = "0.4.0"
mpmath = "1.3.0"
multidict = "6.0.4"
namex = "0.0.8"
nbclassic = "1.0.0"
nbclient = "0.8.0"
nbconvert = "7.6.0"
nbformat = "5.9.0"
nest-asyncio = "1.5.6"
networkx = "3.3"
notebook = "6.5.4"
notebook_shim = "0.2.3"
numpy = "1.26.4"
open-interpreter = "0.1.1"
openai = "0.27.10"
opencv-python = "4.10.0.84"
openpyxl = "3.1.3"
opt-einsum = "3.3.0"
optree = "0.12.1"
outcome = "1.3.0.post0"
overrides = "7.3.1"
packaging = "23.1"
pandocfilters = "1.5.0"
parso = "0.8.3"
pickleshare = "0.7.5"
pillow = "10.4.0"
platformdirs = "3.8.0"
prometheus-client = "0.17.0"
prompt-toolkit = "3.0.38"
protobuf = "4.25.4"
psutil = "5.9.5"
pure-eval = "0.2.2"
pycparser = "2.21"
Pygments = "2.15.1"
pyparsing = "3.1.1"
pyreadline3 = "3.4.1"
pyrsistent = "0.19.3"
PySocks = "1.7.1"
python-dateutil = "2.8.2"
python-dotenv = "1.0.1"
python-editor = "1.0.4"
python-json-logger = "2.0.7"
python-pptx = "1.0.2"
pywin32 = "306"
pywinpty = "2.0.10"
PyYAML = "6.0"
pyzmq = "25.1.0"
qtconsole = "5.4.3"
QtPy = "2.3.1"
readchar = "4.0.5"
regex = "2023.8.8"
requests = "2.32.3"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rich = "13.5.2"
safetensors = "0.4.3"
scholarly = "1.7.11"
scikit-learn = "1.5.2"
scipy = "1.14.1"
selenium = "4.18.1"
Send2Trash = "1.8.2"
six = "1.16.0"
smmap = "5.0.0"
sniffio = "1.3.0"
snowballstemmer = "2.2.0"
sortedcontainers = "2.4.0"
soupsieve = "2.4.1"
Sphinx = "7.2.6"
sphinx-rtd-theme = "2.0.0"
sphinxcontrib-applehelp = "1.0.8"
sphinxcontrib-devhelp = "1.0.6"
sphinxcontrib-htmlhelp = "2.0.5"
sphinxcontrib-jquery = "4.1"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "1.0.7"
sphinxcontrib-serializinghtml = "1.1.10"
stack-data = "0.6.2"
sympy = "1.13.1"
tensorboard = "2.17.0"
tensorboard-data-server = "0.7.2"
tensorflow = "2.17.0"
tensorflow-intel = "2.17.0"
tensorflow-io-gcs-filesystem = "0.31.0"
termcolor = "2.4.0"
terminado = "0.17.1"
threadpoolctl = "3.5.0"
tiktoken = "0.4.0"
timm = "1.0.7"
tinycss2 = "1.2.1"
tokenizers = "0.19.1"
tokentrim = "0.1.10"
torchvision = "0.19.0"
tornado = "6.3.2"
tqdm = "4.66.1"
traitlets = "5.9.0"
transformers = "4.43.3"
trio = "0.24.0"
trio-websocket = "0.11.1"
ttach = "0.0.3"
typing_extensions = "4.10.0"
uri-template = "1.3.0"
urllib3 = "2.0.4"
wcwidth = "0.2.6"
webcolors = "1.13"
webencodings = "0.5.1"
websocket-client = "1.6.1"
Werkzeug = "3.0.3"
wget = "3.2"
widgetsnbextension = "4.0.7"
wrapt = "1.16.0"
wsproto = "1.2.0"
XlsxWriter = "3.2.0"
yarl = "1.9.2"
biosppy = "^2.2.2"
librosa = "^0.10.2.post1"
wfdb = "^4.1.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
